# AzAudio

./: .gitignore  CMakeLists.txt  README.md  build.bat  makefile
base/: AzAudioConfig.cmake  CMakeLists.txt
base/src/AzAudio/: AzAudio.c  AzAudio.h  channel_layout.h  dsp.c  dsp.h  error.h  header_utils.h  helpers.c  helpers.h  math.h  mixer.c  mixer.h  version.c
base/src/AzAudio/backend/: backend.h  interface.c  interface.h
base/src/AzAudio/backend/Linux/: pipewire.c  pulseaudio.c
base/src/AzAudio/backend/Win32/: guid.cpp  platform_util.c  platform_util.h  threads.h  wasapi.c  wintendo.c  xaudio2.c
docs/: index.html
docs/css/: docs.css
include/: audio.h  log.hpp
src/: audio.c  audio.h  dsp.c  dsp.h  helpers.c  helpers.h  log.cpp  main.cpp
src/AzAudio/: AzAudio.c  AzAudio.h  dsp.c  dsp.h  error.h  helpers.c  helpers.h
src/AzAudio/backend/: backend.h  interface.c  interface.h
src/AzAudio/backend/Linux/: alsa.c  jack.c  pipewire.c
tests/: CMakeLists.txt
tests/limiter/: CMakeLists.txt
tests/limiter/src/: main.c
tests/mic_test/: CMakeLists.txt
tests/mic_test/src/: log.cpp  log.hpp  main.cpp
tests/mixer/: CMakeLists.txt
tests/mixer/src/: main.c
tests/spatialize/: CMakeLists.txt
tests/spatialize/src/: main.c
